# liancore-synth

./: .gitignore  CMakeLists.txt  preset_generation_report.json  project_memory.md
.github/workflows/: build.yml  macos-build.yml
.trae/documents/: LianCore_AI_Model_API_Documentation.md  LianCore_Core_Engine_Technical_Documentation.md  LianCore_Technical_Specification_and_Acceptance.md  emotion_slider_ai_integration_design.md
.trae/knowledge/: design_decisions_and_architecture.md  security_best_practices_report.md
assets/: design-philosophy.md  wavetable_visualizer.html
cmake/: FindAAX.cmake  FindONNXRuntime.cmake
docs/: aax-build-guide.md  beta_delivery_summary.md  daw_compatibility_report.json  macos-build-guide.md  macos-test-report-template.md  quick-start.md  roadmap-top-tier.md  security_best_practices_report.md  user-manual.md
models/: audio_encoder.onnx  liancore_ai_model.onnx  param_regressor.onnx  timbre_replication_best.pt  transformer_encoder.onnx  transformer_encoder.pt  wavetable_vae_decoder.onnx
models/tokenizer/: tokenizer.model  tokenizer.vocab  train_corpus.txt
release/: LianCoreCert.pfx  code_signing_request.inf  generate_cert.ps1  install.ps1  installer.nsi  post_build_sign.bat  sign.ps1  sign_ca.ps1
release/assets/: LICENSE.txt
scripts/: analyze_cosine.py  compress_preset_db.py  create_macos_plist.py  daw_compatibility_test.py  deployment_test.py  export_onnx_model.py  generate_factory_presets.py  generate_factory_wavetables.py  generate_pdfs.py  generate_preset_library.py  generate_training_data.py  macos_auto_test.sh  package_release.py  select_factory_presets.py  split_factory_presets.py  sync_to_ascii.ps1  train_audio_encoder.py  train_tokenizer.py  train_transformer.py  train_wavetable_vae.py  upload_release_assets.py  write_nsi.py
src/ai/: AIInferenceEngine.cpp  AIInferenceEngine.h  AIModelTrainer.cpp  AIModelTrainer.h  AITextToWavetable.cpp  AITextToWavetable.h  AudioTimbreAnalyzer.cpp  AudioTimbreAnalyzer.h  EmotionToParameterMapper.cpp  EmotionToParameterMapper.h  OnnxModelExporter.cpp  OnnxModelExporter.h  ParameterSpaceMapper.cpp  ParameterSpaceMapper.h  TextTokenizer.cpp  TextTokenizer.h  TransformerTextEncoder.cpp  TransformerTextEncoder.h  WavetableGenerator.cpp  WavetableGenerator.h
src/core/: AudioGraphEngine.cpp  AudioGraphEngine.h  AudioNode.cpp  AudioNode.h  NodeFactory.cpp  NodeFactory.h
src/modulation/: ChaoticEnvelope.cpp  ChaoticEnvelope.h  ChaoticLFO.cpp  ChaoticLFO.h  EnvelopeGenerator.cpp  EnvelopeGenerator.h  LFOGenerator.cpp  LFOGenerator.h  ModulationMatrix.cpp  ModulationMatrix.h
src/params/: EffectsChainPreset.h  ParameterMapping.cpp  ParameterMapping.h  ParameterTree.cpp  ParameterTree.h  PreparedStatement.cpp  PreparedStatement.h  PresetManager.cpp  PresetManager.h
src/plugin/: MPEProcessor.cpp  MPEProcessor.h  MPERecorder.cpp  MPERecorder.h  OversamplingProcessor.cpp  OversamplingProcessor.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  ResourceDownloader.cpp  ResourceDownloader.h  SimpleHTTPServer.cpp  SimpleHTTPServer.h
src/security/: AES256Encryptor.cpp  AES256Encryptor.h
src/synthesis/: BitCrusher.cpp  BitCrusher.h  Chorus.cpp  Chorus.h  Compressor.cpp  Compressor.h  ConvolutionReverb.cpp  ConvolutionReverb.h  Delay.cpp  Delay.h  Distortion.cpp  Distortion.h  DrumSlicer.cpp  EQ.cpp  EQ.h  FilterProcessor.cpp  FilterProcessor.h  Flanger.cpp  Flanger.h  GranularPlayer.cpp  GranularPlayer.h  MultiSampler.cpp  MultiSampler.h  NoiseGenerator.cpp  NoiseGenerator.h  Phaser.cpp  Phaser.h  Reverb.cpp  Reverb.h  RingMod.cpp  RingMod.h  SpectralOscillator.cpp  SpectralOscillator.h  SpectralWarper.cpp  SpectralWarper.h  StepSequencer.cpp  VirtualAnalogOscillator.cpp  VirtualAnalogOscillator.h  WaveguideResonator.cpp  WaveguideResonator.h  (+4 more)
src/tuning/: MicrotuningManager.cpp  MicrotuningManager.h  ScalaFileLoader.cpp  ScalaFileLoader.h
src/ui/: EffectsChainUI.cpp  EffectsChainUI.h  GrainEnvelopeVisualizer.cpp  GrainEnvelopeVisualizer.h  GranularEngineUI.cpp  GranularEngineUI.h  MPERecordingUI.cpp  MPERecordingUI.h  WavetableEditor.cpp  WavetableEditor.h
src/utils/: AudioUtils.h
tests/: CMakeLists.txt  test_audio_graph.cpp  test_audio_node.cpp  test_modulation.cpp  test_wavetable.cpp
tests/ai/: AIInferenceEngineTests.cpp  AIWavetableUITests.cpp  AudioTimbreAnalyzerTests.cpp  EmotionToParameterMapperTests.cpp  MPEAndMicrotuningTests.cpp  TimbreMatchTests.cpp  WavetableGeneratorTests.cpp
tests/include/: JuceHeader.h
tests/modulation/: ChaosModulationTests.cpp
tests/params/: ParameterTreeTests.cpp  PresetManagerTests.cpp
tests/performance/: PerformanceBenchmarks.cpp
tests/plugin/: MPEProcessorTests.cpp  OversamplingProcessorTests.cpp  PolyphonyStressTests.cpp
tests/synthesis/: EffectsTests.cpp  SpectralWarperTests.cpp
tests/tuning/: MicrotuningTests.cpp
ui/: index.html  package.json  playwright.config.ts  vite.config.ts
ui/src/: App.tsx  ProMode.tsx  styles.css  websocket.ts
ui/src/locales/: en.json  zh-CN.json  zh-TW.json
ui/tests/: algorithmic-art.spec.ts  minimal-mode.spec.ts  pro-mode.spec.ts
ui/visualizations/: algorithmic_art.html  algorithmic_philosophy.md
